# lexai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: graph.py  state.py
agent/nodes/: critic.py  planner.py  researcher.py  synthesiser.py
agent/prompts/: critic.py  planner.py  researcher.py  synthesiser.py
agent/tools/: calculator.py  case_law_search.py  citation_formatter.py  legal_retriever.py  statute_search.py
api/: __init__.py  config.py  dependencies.py  main.py
api/middleware/: __init__.py  auth.py  rate_limit.py
api/routes/: __init__.py  health.py  ingest.py  query.py
api/schemas/: query.py
data/: constitution_fundamental_rights.txt  contract_act_sections.txt  crpc_bail_sections.txt  ppc_sections.txt  qanun_e_shahadat_sections.txt
infra/: .dockerignore  Dockerfile.api  docker-compose.yml  init.sql  prometheus.yml
infra/ingestion/: __init__.py  loader.py
ingestion/: chunker.py  cli.py  embedder.py  pipeline.py
retriever/: __init__.py  engine.py  evaluate.py
scripts/: seed_database.py
tests/: __init__.py  test_agent.py  test_health.py  test_retriever.py  test_tools.py
